Adding quad capabilities to HDT

--- a/hdt-java-core/hdt.cfg
+++ b/hdt-java-core/hdt.cfg
@@ -2,7 +2,13 @@
 header.type = <http://purl.org/HDT/hdt#headerSimple>
 triples.type = <http://purl.org/HDT/hdt#triplesBitmap>
 triples.component.order = SPO
-dictionary.type = dictionaryFourBig
+dictionary.type = <http://purl.org/HDT/hdt#dictionaryFour>
+
+# 3 = Triples, 4 = Quads
+#triples.components.count = 3
+# AT = Annotated Triples, AG = Annotated Graphs
+graph.type = <http://purl.org/HDT/hdt#AT>
+
 #stream.y = <http://purl.org/HDT/hdt#streamLog>
 #stream.z = <http://purl.org/HDT/hdt#streamLog>
 
