--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ hdt-fuseki/config-hdt.ttl
 # IntelliJ IDEA project files
 .idea
 *.iml
+
+# eclipse files
+.classpath
+.project
+.settings/org.eclipse*
