--- a/hdt-api/pom.xml
+++ b/hdt-api/pom.xml
@@ -8,7 +8,8 @@
 	<parent>
 	    <groupId>org.rdfhdt</groupId>
 	    <artifactId>hdt-java-parent</artifactId>
-	    <version>2.0-SNAPSHOT</version>
+	    <version>2.2</version>
+	    <relativePath>../</relativePath>
 	</parent>
 	  
   	<licenses>
@@ -20,4 +21,17 @@
 		</license>
 	</licenses>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
