--- a/hdt-java-core/pom.xml
+++ b/hdt-java-core/pom.xml
@@ -8,7 +8,8 @@
     <parent>
         <groupId>org.rdfhdt</groupId>
         <artifactId>hdt-java-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.2</version>
+        <relativePath>../</relativePath>
     </parent>
 	
     <licenses>
@@ -24,40 +25,65 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
+            <version>4.11</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-arq</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <version>1.32</version>
         </dependency>
         <dependency>
             <groupId>org.rdfhdt</groupId>
             <artifactId>hdt-api</artifactId>
-            <version>${project.version}</version>
+            <version>2.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
+            <version>1.10</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-core</artifactId>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-base</artifactId>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>pl.edu.icm</groupId>
             <artifactId>JLargeArrays</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.roaringbitmap</groupId>
+            <artifactId>RoaringBitmap</artifactId>
+            <version>[0.6,)</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
                 <configuration>
                     <mainClass>org.rdfhdt.hdt.example.ExampleGenerate</mainClass>
                 </configuration>
