--- a/hdt-java-package/pom.xml
+++ b/hdt-java-package/pom.xml
@@ -8,29 +8,30 @@
   <parent>
     <groupId>org.rdfhdt</groupId>
     <artifactId>hdt-java-parent</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.2</version>
+    <relativePath>../</relativePath>
   </parent>
-
+  
   <dependencies>
   	<dependency>
   		<groupId>org.rdfhdt</groupId>
   		<artifactId>hdt-api</artifactId>
-  		<version>${project.version}</version>
+  		<version>2.2</version>
   	</dependency>
   	<dependency>
   	<groupId>org.rdfhdt</groupId>
   		<artifactId>hdt-java-core</artifactId>
-  		<version>${project.version}</version>
+  		<version>2.2</version>
   	</dependency>
   	<dependency>
   	<groupId>org.rdfhdt</groupId>
   		<artifactId>hdt-java-cli</artifactId>
-  		<version>${project.version}</version>
+  		<version>2.2</version>
   	</dependency>
   	<dependency>
   	<groupId>org.rdfhdt</groupId>
   		<artifactId>hdt-jena</artifactId>
-  		<version>${project.version}</version>
+  		<version>2.2</version>
   	</dependency>
   </dependencies>
   
@@ -40,6 +41,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
                 <!-- The configuration of the plugin -->
                 <configuration>
                     <!-- Specifies the configuration file of the assembly plugin -->
