--- a/hdt-jena/pom.xml
+++ b/hdt-jena/pom.xml
@@ -8,44 +8,54 @@
   <parent>
     <groupId>org.rdfhdt</groupId>
     <artifactId>hdt-java-parent</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.2</version>
+    <relativePath>../</relativePath>
   </parent>
-
-  <properties>
-    <jdk.version>${jena-jdk.version}</jdk.version>
-  </properties>
 
   <dependencies>
   	<dependency>
   		<groupId>org.rdfhdt</groupId>
   		<artifactId>hdt-java-core</artifactId>
-  		<version>${project.version}</version>
+  		<version>2.2</version>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.jena</groupId>
   		<artifactId>jena-core</artifactId>
+  		<version>3.0.1</version>
   	</dependency>
 	<dependency>
 	    <groupId>org.apache.jena</groupId>
 		<artifactId>jena-arq</artifactId>
+		<version>3.0.1</version>
 	</dependency>
 	<dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-	<scope>test</scope>
+	    <version>4.11</version>
 	</dependency>
 	<dependency>
         <groupId>org.apache.jena</groupId>
         <artifactId>jena-base</artifactId>
+        <version>3.0.1</version>
     </dependency>
     <dependency>
         <groupId>org.rdfhdt</groupId>
         <artifactId>hdt-api</artifactId>
-        <version>${project.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>com.beust</groupId>
-        <artifactId>jcommander</artifactId>
+        <version>2.2</version>
     </dependency>
   </dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
