Fix compilation problems

--- a/hdt-java-core/pom.xml
+++ b/hdt-java-core/pom.xml
@@ -65,7 +65,8 @@
         <dependency>
             <groupId>org.roaringbitmap</groupId>
             <artifactId>RoaringBitmap</artifactId>
-            <version>[0.6,)</version>
+            <!--<version>[0.6,)</version>-->
+            <version>0.6.58</version>
         </dependency>
     </dependencies>
 
